# WiPro

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  schrodinger.inp  schrodinger_plot  schrodinger_plot.py  schrodinger_solve.py
docs/: api.rst  conf.py  index.rst  schrodinger_plot.rst  schrodinger_solve.rst
schrodinger/: __init__.py  schrodinger_plot.py  schrodinger_solve.py
test/: test_anal.py  test_previous.py
test/infinitePot/: schrodinger.inp
